# openai-ml-phase1

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  make.ps1  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: api-fuzz.yml  ci.yml  evals-sbom.yml  retrieval-evals.yml  security.yml  semantic-pr.yml
data/: manifest.json  queries.jsonl
data/corpus/: doc00.txt  doc01.txt  doc02.txt  doc03.txt  doc04.txt  doc05.txt  doc06.txt  doc07.txt  doc08.txt  doc09.txt  doc10.txt  doc11.txt  doc12.txt  doc13.txt  doc14.txt  doc15.txt  doc16.txt  doc17.txt  doc18.txt  doc19.txt  doc20.txt  doc21.txt  doc22.txt  doc23.txt  doc24.txt  doc25.txt  doc26.txt  doc27.txt  doc28.txt  doc29.txt  doc30.txt  doc31.txt  doc32.txt  doc33.txt  doc34.txt  doc35.txt  doc36.txt  doc37.txt  doc38.txt  doc39.txt  (+50 more)
docs/: DATASET_DATASHEET.md  MODEL_CARD.md  OWASP-GENAI.md  branch-protection.md
evals/: CHANGELOG.md  README.md  baseline.json  run.py
evals/dataset/: qas.jsonl
evals/reports/: bm25-7cc8228934a0c8f31241f4a70e0b778f190adb06.json  hybrid-7cc8228934a0c8f31241f4a70e0b778f190adb06.json
fastapi_app/app/: config.py  logging.py  main.py  middleware.py  problem.py  telemetry.py
fastapi_app/app/api/: v1.py
fastapi_app/tests/: test_api_router.py  test_health.py  test_observability.py  test_phase2.py  test_ready.py  test_search_api.py  test_telemetry.py
ml/: train_loop.py
ml/tests/: test_train_loop.py
rag/: bm25_index.py  chunking.py  eval_metrics.py  index.py  ingestion.py  retrieve.py  retriever.py
rag/backends/: base.py  bm25.py  embed.py  hybrid.py
rag/configs/: settings.yaml
rag/eval/: fixtures.json
rag/eval/sample_corpus/: a.txt  b.txt
rag/tests/: test_backends.py  test_bm25.py  test_chunking.py  test_ingestion.py  test_retrieve.py
scripts/: compare_eval.py  eval_retrieval.py  update_baseline.py
tests/: _rag_smoke_utils.py  test_rag_smoke.py
tests/evals/: test_eval_scripts.py
tests/rag/: test_api.py  test_backends.py
