[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-ml-phase1"
version = "0.1.0"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N", "C90"]
ignore = ["E203", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
ignore_missing_imports = true
exclude = "tests"

[[tool.mypy.overrides]]
module = ["fastapi_app.*", "rag.*", "ml.*"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["fastapi_app.tests.*", "rag.tests.*", "ml.tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--quiet --cov=fastapi_app --cov=rag --cov=ml --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
testpaths = ["fastapi_app/tests", "rag/tests", "ml/tests"]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "fastapi_app/app/telemetry.py",
    "fastapi_app/app/main.py",
    "rag/eval_metrics.py",
    "rag/ingestion.py",
    "rag/index.py",
    "rag/retrieve.py",
    "rag/retriever.py",
    "rag/backends/*",
    "ml/train_loop.py",
]
